Continue work on classloader - Posting ModInitEvent to mods doesn't work because of the different classloaders involved